# cnn-sample

./: ActivationLayer.cpp  ActivationLayer.h  CMakeCache.txt  CMakeLists.txt  ConvolutionLayer.cpp  ConvolutionLayer.h  DebugPrint.h  FullConnect.cpp  FullConnect.h  Layer.cpp  Layer.h  Makefile  Minst.cpp  Minst.h  Net.cpp  Net.h  PoolingLayer.cpp  PoolingLayer.h  ReluLayer.cpp  ReluLayer.h  SigmoidLayer.cpp  SigmoidLayer.h  SoftmaxLayer.cpp  SoftmaxLayer.h  TanhLayer.cpp  TanhLayer.h  cmake_install.cmake  main.cpp  model.txt  readme
